<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tapis" >

    
    <LinearLayout
        android:id="@+id/linearLayoutContentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="31dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/but_NewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_newgame" />

        <Button
            android:id="@+id/but_Continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_continue" />

        <Button
            android:id="@+id/but_Profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_profil" />
    </LinearLayout>


</RelativeLayout>
